[codex] Unify element action failure reporting (#2952)
Unify element action reporting